TAG: lib_java_dbsmgd-1-0-34
DATE: 12/02/2004
STAFF: mbw
CHANGES: changed the use of floats to doubls in MarkerFactory and SequenceFactory

TAG: lib_java_dbsmgd-tr6365-BP
DATE: 12/01/2004
STAFF: sc
CHANGES: Branch point tag

TAG: lib_java_dbsmgd-1-0-33
DATE: 11/23/2004
STAFF: jsb
CHANGES:
1) merge changes in from patch302 branch

TAG: lib_java_dbsmgd-patch302-1
DATE: 11/09/2004
STAFF: jsb
CHANGES:
1) fixes to SequencerFactory.java for 3.02 release, for multi-clone coll.

TAG: lib_java_dbsmgd-1-0-32
DATE: 10/22/2004
STAFF: sc
CHANGES: TR5395
1) Josh made changes to: DBConstants.java, MarkerFactory.java, 
   SequenceFactory.java

TAG: lib_java_dbsmgd-1-0-31
DATE: 10/20/2004
STAFF: sc
CHANGES: TR5395
1) Added ChromosomeKeyLookup

TAG: lib_java_dbsmgd-1-0-30
DATE: 10/20/2004
STAFF: sc
CHANGES: TR5395
1) Added new keys to VocabularyTypeConstants, MGIRefAssocTypeConstants,
   LogicalDBConstants, MGITypeConstants
2) generatedTables.txt - added MAP_Coordinate, MAP_Coord_Feature, MRK_Chromosome
3) Added MGITypeLookup and  CoordMapCollectionKeyLookup.java

TAG: lib_java_dbsmgd-1-0-29
DATE: 08/04/2004
STAFF: jsb, jw
CHANGES:
1) fixes to MarkerFactory.java and SequenceFactory.jar for 3.01 release

TAG: lib_java_dbsmgd-1-0-28
DATE: 05/27/2004
STAFF: jsb
CHANGES:
1) fixes to MarkerFactory.java to ensure retrieval of distinct sequences

TAG: lib_java_dbsmgd-1-0-27
DATE: 05/24/2004
STAFF: jsb
CHANGES:
1) fixes to MarkerFactory.java + DBConstants.java to deal w/ interim nomen

TAG: lib_java_dbsmgd-1-0-26
DATE: 05/19/2004
STAFF: jsb
CHANGES:
1) fixes to MarkerFactory.java to handle GO annotations with multiple evidence rows

TAG: lib_java_dbsmgd-1-0-25
DATE: 05/17/2004
STAFF: jw
CHANGES:
1) fixes to SequenceFactory.java to handle multiple clone collections

TAG: lib_java_dbsmgd-1-0-24
DATE: 05/11/2004
STAFF: jw
CHANGES:
1) fixes to SequenceFactory.java to handle multiple clone collections

TAG: lib_java_dbsmgd-1-0-23
DATE: 05/10/2004
STAFF: mbw
CHANGES: